# bitcoin-spv-lib

./: .gitignore  Makefile  README.md  capsule.toml
contracts/bitcoin-spv-lib/: Cargo.toml
contracts/bitcoin-spv-lib/src/: main.rs  types.rs
schema/: bitcoin-spv.mol
tests/src/: lib.rs  tests.rs
tests/src/types/: bitcoin_spv_lib.rs  mod.rs
