[package]
name = "bitcoin-spv-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.6.0"
bitcoin-spv = { git = "https://github.com/huwenchao/bitcoin-spv.git", branch = "rust-no-std", default-features = false }
num = { version = "0.3", default-features = false, features = ["alloc"] }
molecule = { version = "0.6", default-features = false }

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
